# truss_finite_element_method

./: README.md
cli/: Cargo.toml  README.md  run.bat  run.sh
cli/examples/: plane_truss.txt  space_truss.html  space_truss.txt
cli/input/: bridge_pratt_2d.txt  bridge_pratt_3d.html  bridge_pratt_3d.txt  building_tower_3d.txt  roof_howe_2d.txt  transmission_tower_3d.txt
cli/src/: linalg.rs  main.rs  model.rs  report.rs  shell.rs  solver.rs  viewer.rs  viewer_template.html
