[package]
name = "truss-fem"
version = "2.0.0"
edition = "2021"
description = "Direct-stiffness finite element analysis for 2D/3D trusses with a built-in web viewer"
authors = ["Kang Taewook <laputa99999@gmail.com>"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "truss-fem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
